add initial GUI (search)